Правка отступов и карточек товара

--- a/catalog.html
+++ b/catalog.html
@@ -1,265 +1,254 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-	<meta charset="utf-8">
-	<title>Каталог перфораторов</title>
+  <meta charset="utf-8">
+  <title>Каталог перфораторов</title>
 </head>
 <body>
-	<header class="page-header">
-		<div class="header-top">
-			<a class="header-logo" href="index.html">Техномарт</a> <!-- Логотип -->
+  <header class="page-header">
+    <div class="header-top">
+      <a class="header-logo" href="index.html">Техномарт</a> <!-- Логотип -->
+      <form><input type="search" placeholder="поиск"></form>
+      <a class="bookmarks" href="#">Закладки: 0</a>
+      <a class="basket" href="#">Корзина: 10</a>
+      <a class="checkout" href="#">Оформить заказ</a>
+    </div>
 
-			<div class="search"><input type="search" placeholder="поиск"></div>
-			<div class="bookmarks"><a href="#">Закладки: 0</a></div>
-			<div class="basket"><a href="#">Корзина: 10</a></div>
-			<div class="checkout"><a href="#">Оформить заказ</a></div>
-		</div>
+    <div class="header-middle">
 
-		<div class="header-middle">
+      <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
 
-			<h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
+      <div class="header-contacts">
+        <p>+7 (812) 555-05-55</p>
+        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+      </div>
 
-			<div class="header-middle-contacts">
-				<p>+7 (812) 555-05-55</p>
-				<p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-			</div>
+      <div class="user-navigation">
+        <ul class="user-navigation-block">
+          <li><a href="#">Равшан Джамшутович</a></li>
+          <li><a href="#">Выход</a></li>
+        </ul>
+        <ul>
+          <li><a href="#" class="user-navigation-link">Мои заказы</a></li>
+          <li><a href="#" class="user-navigation-link">Личный кабинет</a></li>
+        </ul>
+      </div>
 
-			<div class="user-navigation">
-				<ul class="user-navigation-block">
-					<li><a href="#">Равшан Джамшутович</a></li>
-					<li><a href="#">Выход</a></li>
-				</ul>
-  			<ul>
-  				<li><a href="#" class="user-navigation-link">Мои заказы</a></li>
-  				<li><a href="#" class="user-navigation-link">Личный кабинет</a></li>
-  			</ul>
-  		</div>
-
-  		<nav class="site-navigation">
-  			<ul>
-  				<li><a href="index.html">Главная</a></li>
-    			<li><a href="#">Компания</a></li>
-    			<li><a href="catalog.html">Каталог</a></li>
-    			<li><a href="#">Новости</a></li>
-    			<li><a href="#">Спецпредложения</a></li>
-    			<li><a href="#">Доставка</a></li>
-    			<li><a href="#">Контакты</a></li>
-    		</ul> <!-- Навигация -->
-    	</nav>
+      <nav class="site-navigation">
+        <ul>
+          <li><a href="index.html">Главная</a></li>
+          <li><a href="#">Компания</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
+          <li><a href="#">Новости</a></li>
+          <li><a href="#">Спецпредложения</a></li>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul> <!-- Навигация -->
+      </nav>
     </div>
   </header>
 
-	<main class="container">
-		<ul class="breadcrumbs">
-			<li><a href="index.html">Главная</a></li>
-  		<li><a href="catalog.html">Каталог</a></li>
-  		<li><a href="#">Инструмент</a></li>
-  		<li class="breadcrumbs-current">Перфораторы</li>
-  	</ul>
+  <main class="container">
+    <ul class="breadcrumbs">
+      <li><a href="index.html">Главная</a></li>
+      <li><a href="catalog.html">Каталог</a></li>
+      <li><a href="#">Инструмент</a></li>
+      <li class="breadcrumbs-current">Перфораторы</li>
+    </ul>
 
-  	<h2 class="page-title">Перфораторы</h2>
+    <h2 class="page-title">Перфораторы</h2>
 
-  	<section class="filters">
-  		<h3>Фильтр:</h3> <!-- здесь будет форма -->
-  	</section>
+    <section class="filters">
+      <h3>Фильтр:</h3> <!-- здесь будет форма -->
+    </section>
 
-  	<section class="sorting">
-  		<h3>Сортировка:</h3>
-  		<div class="sorting-options">
-  			<a href="#" class="sorting-option-price sorting-options-current">По цене</a>
+    <section class="sorting">
+      <h3>Сортировка:</h3>
+      <div class="sorting-options">
+        <a href="#" class="sorting-option-price sorting-options-current">По цене</a>
         <a href="#" class="sorting-option-type">По типу</a>
         <a href="#" class="sorting-option-function">По функционалу</a>
         <a class="option-up-arrow option-current" href="#"></a>
         <a class="option-down-arrow" href="#"></a>
       </div>
-  	</section>
+    </section>
 
-  	<section class="catalog">
+    <section class="catalog">
 
-  		<h2 class="visually-hidden">Список перфораторов</h2>
+      <h2 class="visually-hidden">Список перфораторов</h2>
 
-  		<div class="catalog-item">
-  			<img src="img.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 3000">
-  			<div class="catalog-item-buttons">
-  				<a href="#" class="button-item-buy">Купить</a>
-					<a href="#" class="button-item-bookmark">В закладки</a>
-				</div>
-				<a href="#" class="catalog-item-vendor">Перфоратор BOSCH</a>
-				<a href="#" class="catalog-item-model">BFG 3000</a>
-				<a href="#" class="catalog-item-price">22500 Р.</a>
-				<a href="#" class="catalog-item-discount">15500 Р.</a>
-			</div>
+      <div class="catalog-item">
+        <img src="img.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 3000">
+        <div class="catalog-item-buttons">
+          <a class="item-button-buy" href="#">Купить</a>
+          <a class="item-button-bookmark" href="#">В закладки</a>
+        </div>
+        <a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 3000</a>
+        <s class="catalog-item-price">22500 Р.</s>
+        <a class="catalog-item-discount-price" href="#">15500 Р.</a>
+      </div>
 
-  		<div class="catalog-item">
-  			<img src="img.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 6000">
-  			<div class="catalog-item-buttons">
-  				<a href="#" class="button-item-buy">Купить</a>
-					<a href="#" class="button-item-bookmark">В закладки</a>
-				</div>
-				<a href="#" class="catalog-item-vendor">Перфоратор BOSCH</a>
-				<a href="#" class="catalog-item-model">BFG 6000</a>
-				<a href="#" class="catalog-item-price">30500 Р.</a>
-				<a href="#" class="catalog-item-discount">22500 Р.</a>
-			</div>
+      <div class="catalog-item">
+        <img src="img.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 6000">
+        <div class="catalog-item-buttons">
+          <a class="item-button-buy" href="#">Купить</a>
+          <a class="item-button-bookmark" href="#">В закладки</a>
+        </div>
+        <a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 6000</a>
+        <s class="catalog-item-price">30500 Р.</s>
+        <a class="catalog-item-discount-price" href="#">25500 Р.</a>
+      </div>
 
-  		<div class="catalog-item">
-  			<img src="img.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 2000">
-  			<div class="catalog-item-buttons">
-  				<a href="#" class="button-item-buy">Купить</a>
-					<a href="#" class="button-item-bookmark">В закладки</a>
-				</div>
-				<a href="#" class="catalog-item-vendor">Перфоратор BOSCH</a>
-				<a href="#" class="catalog-item-model">BFG 2000</a>
-				<a href="#" class="catalog-item-discount">12500 Р.</a>
-			</div>
+      <div class="catalog-item">
+        <img src="img.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 2000">
+        <div class="catalog-item-buttons">
+          <a class="item-button-buy" href="#">Купить</a>
+          <a class="item-button-bookmark" href="#">В закладки</a>
+        </div>
+        <a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 2000</a>
+        <a class="catalog-item-discount-price" href="#">12500 Р.</a>
+      </div>
 
-  		<div class="catalog-item">
-  			<img src="img.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 3000">
-  			<div class="catalog-item-buttons">
-  				<a href="#" class="button-item-buy">Купить</a>
-					<a href="#" class="button-item-bookmark">В закладки</a>
-				</div>
-				<a href="#" class="catalog-item-vendor">Перфоратор BOSCH</a>
-				<a href="#" class="catalog-item-model">BFG 3000</a>
-				<a href="#" class="catalog-item-price">22500 Р.</a>
-				<a href="#" class="catalog-item-discount">15500 Р.</a>
-			</div>
+      <div class="catalog-item">
+        <img src="img.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 3000">
+        <div class="catalog-item-buttons">
+          <a class="item-button-buy" href="#">Купить</a>
+          <a class="item-button-bookmark" href="#">В закладки</a>
+        </div>
+        <a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 3000</a>
+        <s class="catalog-item-price">22500 Р.</s>
+        <a class="catalog-item-discount-price" href="#">15500 Р.</a>
+      </div>
 
-  		<div class="catalog-item">
-  			<img src="img.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 6000">
-  			<div class="catalog-item-buttons">
-  				<a href="#" class="button-item-buy">Купить</a>
-					<a href="#" class="button-item-bookmark">В закладки</a>
-				</div>
-				<a href="#" class="catalog-item-vendor">Перфоратор BOSCH</a>
-				<a href="#" class="catalog-item-model">BFG 6000</a>
-				<a href="#" class="catalog-item-price">30500 Р.</a>
-				<a href="#" class="catalog-item-discount">22500 Р.</a>
-			</div>
+      <div class="catalog-item">
+        <img src="img.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 6000">
+        <div class="catalog-item-buttons">
+          <a class="item-button-buy" href="#">Купить</a>
+          <a class="item-button-bookmark" href="#">В закладки</a>
+        </div>
+        <a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 6000</a>
+        <s class="catalog-item-price">30500 Р.</s>
+        <a class="catalog-item-discount-price" href="#">25500 Р.</a>
+      </div>
 
-  		<div class="catalog-item">
-  			<img src="img.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 2000">
-  			<div class="catalog-item-buttons">
-  				<a href="#" class="button-item-buy">Купить</a>
-					<a href="#" class="button-item-bookmark">В закладки</a>
-				</div>
-				<a href="#" class="catalog-item-vendor">Перфоратор BOSCH</a>
-				<a href="#" class="catalog-item-model">BFG 2000</a>
-				<a href="#" class="catalog-item-discount">12500 Р.</a>
-			</div>
+      <div class="catalog-item">
+        <img src="img.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 2000">
+        <div class="catalog-item-buttons">
+          <a class="item-button-buy" href="#">Купить</a>
+          <a class="item-button-bookmark" href="#">В закладки</a>
+        </div>
+        <a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 2000</a>
+        <a class="catalog-item-discount-price" href="#">12500 Р.</a>
+      </div>
 
-  		<div class="catalog-item">
-  			<img src="img.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 3000">
-  			<div class="catalog-item-buttons">
-  				<a href="#" class="button-item-buy">Купить</a>
-					<a href="#" class="button-item-bookmark">В закладки</a>
-				</div>
-				<a href="#" class="catalog-item-vendor">Перфоратор BOSCH</a>
-				<a href="#" class="catalog-item-model">BFG 3000</a>
-				<a href="#" class="catalog-item-price">22500 Р.</a>
-				<a href="#" class="catalog-item-discount">15500 Р.</a>
-			</div>
+      <div class="catalog-item">
+        <img src="img.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 3000">
+        <div class="catalog-item-buttons">
+          <a class="item-button-buy" href="#">Купить</a>
+          <a class="item-button-bookmark" href="#">В закладки</a>
+        </div>
+        <a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 3000</a>
+        <s class="catalog-item-price">22500 Р.</s>
+        <a class="catalog-item-discount-price" href="#">15500 Р.</a>
+      </div>
 
-  		<div class="catalog-item">
-  			<img src="img.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 6000">
-  			<div class="catalog-item-buttons">
-  				<a href="#" class="button-item-buy">Купить</a>
-					<a href="#" class="button-item-bookmark">В закладки</a>
-				</div>
-				<a href="#" class="catalog-item-vendor">Перфоратор BOSCH</a>
-				<a href="#" class="catalog-item-model">BFG 6000</a>
-				<a href="#" class="catalog-item-price">30500 Р.</a>
-				<a href="#" class="catalog-item-discount">22500 Р.</a>
-			</div>
+      <div class="catalog-item">
+        <img src="img.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 6000">
+        <div class="catalog-item-buttons">
+          <a class="item-button-buy" href="#">Купить</a>
+          <a class="item-button-bookmark" href="#">В закладки</a>
+        </div>
+        <a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 6000</a>
+        <s class="catalog-item-price">30500 Р.</s>
+        <a class="catalog-item-discount-price" href="#">25500 Р.</a>
+      </div>
 
-  		<div class="catalog-item">
-  			<img src="img.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 2000">
-  			<div class="catalog-item-buttons">
-  				<a href="#" class="button-item-buy">Купить</a>
-					<a href="#" class="button-item-bookmark">В закладки</a>
-				</div>
-				<a href="#" class="catalog-item-vendor">Перфоратор BOSCH</a>
-				<a href="#" class="catalog-item-model">BFG 2000</a>
-				<a href="#" class="catalog-item-discount">12500 Р.</a>
-			</div>
+      <div class="catalog-item">
+        <img src="img.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 2000">
+        <div class="catalog-item-buttons">
+          <a class="item-button-buy" href="#">Купить</a>
+          <a class="item-button-bookmark" href="#">В закладки</a>
+        </div>
+        <a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 2000</a>
+        <a class="catalog-item-discount-price" href="#">12500 Р.</a>
+      </div>
 
-  		<ul class="pagination">
-  			<li class="pagination-current"><a>1</a></li>
-  			<li><a href="#">2</a></li>
-  			<li><a href="#">3</a></li>
-  			<li><a href="#">Следующая</a></li>
-  		</ul>
+      <ul class="pagination">
+        <li class="pagination-current"><a>1</a></li>
+        <li><a href="#">2</a></li>
+        <li><a href="#">3</a></li>
+        <li><a href="#">Следующая</a></li>
+      </ul>
 
-  	</section>
+    </section>
 
-  	<section class="main-bottom">
-  		<h3>Пара слов о перфораторах</h3>
-  		<p>Перфоратор - универсальный строительный инструмент. Предназначенный для сверления и долбления отверстий в кирпиче, бетоне и камне.
-  			Существуют электромеханические и пневматические перфораторы. Современные модели могу выполнять функции дрели, Шуруповерта и отбойного молотка. В 
-  		Ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
-  	</section>
+    <section class="main-bottom">
+      <h3>Пара слов о перфораторах</h3>
+      <p>Перфоратор - универсальный строительный инструмент. Предназначенный для сверления и долбления отверстий в кирпиче, бетоне и камне.
+        Существуют электромеханические и пневматические перфораторы. Современные модели могу выполнять функции дрели, Шуруповерта и отбойного молотка. В
+        Ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
+      </section>
   </main>
 
   <footer>
-  	<div class="footer-top">
-  		<a class="footer-logo" href="index.html">Техномарт</a> <!-- Логотип в футере -->
+    <div class="footer-top">
+      <a class="footer-logo" href="index.html">Техномарт</a> <!-- Логотип в футере -->
 
-  		<ul class="footer-top-navigation">
-  			<li><a href="#">Компания</a></li>
-	      <li><a href="#">Новости</a></li>
-	      <li><a href="catalog.html">Каталог</a></li>
-	      <li><a href="#">Доставка</a></li>
-	      <li><a href="#">Контакты</a></li>
-	    </ul>
-	  </div>
+      <ul class="footer-top-navigation">
+        <li><a href="#">Компания</a></li>
+        <li><a href="#">Новости</a></li>
+        <li><a href="catalog.html">Каталог</a></li>
+        <li><a href="#">Доставка</a></li>
+        <li><a href="#">Контакты</a></li>
+      </ul>
+    </div>
 
-	  <div class="footer-middle">
-	  	<div class="footer-middle-contacts">
-	  		<p>г. Санкт-Петербург, ул.Б.Конюшенная, д.19/8</p>
-	  		<p>+7(812)555-05-55</p>
-	  	</div>
+    <div class="footer-middle">
+      <div class="contacts">
+        <p>г. Санкт-Петербург, ул.Б.Конюшенная, д.19/8</p>
+        <p>+7(812)555-05-55</p>
+      </div>
 
-	  	<ul class="footer-middle-navigation">
-	  		<li><a href="">Материалы</a></li>
-        <li><a href="">Техника</a></li>
-        <li><a href="">Инструмент</a></li>
-        <li><a href="">Спецпредложения</a></li>
+      <ul class="footer-middle-navigation">
+        <li><a href="#">Материалы</a></li>
+        <li><a href="#">Техника</a></li>
+        <li><a href="#">Инструмент</a></li>
+        <li><a href="#">Спецпредложения</a></li>
       </ul>
     </div>
 
     <div class="footer-bottom">
-    	<div class="footer-bottom-copyright">
-    		<p>© 2010–2017 Компания «Техномарт»</p>
-    		<p>Все права защищены</p>
-    	</div>
+      <div class="copyright">
+        <p>© 2010–2017 Компания «Техномарт»</p>
+        <p>Все права защищены</p>
+      </div>
 
-    	<ul class="footer-bottom-social">
-    		<li><a class="social-button" href="#">Вконтакте</a></li>
+      <ul class="social">
+        <li><a class="social-button" href="#">Вконтакте</a></li>
         <li><a class="social-button" href="#">Фейсбук</a></li>
         <li><a class="social-button" href="#">Инстаграм</a></li>
       </ul>
 
-      <div class="footer-bottom-feedback">
-      	<p>Обратная связь: </p>
-      	<a class="footer-feedback-mail" href="#">mail@htmlacademy.ru</a>
+      <div class="feedback">
+        <p>Обратная связь: </p>
+        <a class="footer-feedback-mail" href="#">mail@htmlacademy.ru</a>
       </div>
-      <div class="footer-bottom-developed">
-      	<p>Разработано - </p>
-      	<a class="footer-feedback-site" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
+      <div class="copyright">
+        <p>Разработано - </p>
+        <a class="copyright-site" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
       </div>
     </div>
   </footer>
 
   <div class="cart-notification">
-  	<a href="#" class="cart-notification-close"></a>
-  	<form action="/cart" method="post">
-  		<p class="cart-notification-title">Товар добавлен в корзину!</p>
-  		<div class="cart-notification-decision">
-  			<button type="submit" class="cart-order-btn">Оформить заказ</button>
-  			<a href="#" class="cart-cancel-btn">Продолжить покупки</a>
-  		</div>
-  	</form>
+    <a href="#" class="cart-notification-close"></a>
+    <form action="/cart" method="post">
+      <p class="cart-notification-title">Товар добавлен в корзину!</p>
+      <div class="cart-notification-decision">
+        <button type="submit" class="cart-order-btn">Оформить заказ</button>
+        <a href="#" class="cart-cancel-btn">Продолжить покупки</a>
+      </div>
+    </form>
   </div>
 </body>
 </html>
-
