--- a/index.html
+++ b/index.html
@@ -1,41 +1,38 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-	<meta charset="utf-8">
-	<title>HTML Academy: Техномарт</title>
+  <meta charset="utf-8">
+  <title>HTML Academy: Техномарт</title>
 </head>
 <body>
-	<header class="page-header">
-		<div class="header-top">
+  <header class="page-header">
 
-			<a class="header-logo" href="index.html">Техномарт</a> <!-- Логотип -->
+    <div class="header-top">
+      <a class="header-logo" href="index.html">Техномарт</a> <!-- Логотип -->
+      <form><input type="search" placeholder="поиск"></form>
+      <a class="bookmarks" href="#">Закладки: 0</a>
+      <a class="basket" href="#">Корзина: 10</a>
+      <a class="checkout" href="#">Оформить заказ</a>
+    </div>
 
-			<div class="search"><input type="search" placeholder="поиск"></div>
-			<div class="bookmarks"><a href="#">Закладки: 0</a></div>
-			<div class="basket"><a href="#">Корзина: 10</a></div>
-			<div class="checkout"><a href="#">Оформить заказ</a></div>
-		</div>
+    <div class="header-middle">
+      <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
+      <div class="contacts">
+        <p>+7 (812) 555-05-55</p>
+        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+      </div>
 
-		<div class="header-middle">
-
-			<h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
-
-			<div class="contacts">
-				<p>+7 (812) 555-05-55</p>
-  			<p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-  		</div>
-
-  		<div class="authorization">
-  			<div class="enter">
-  				<a href="#">Войти</a>
-  			</div>
+      <div class="authorization">
+        <div class="enter">
+          <a href="#">Войти</a>
+        </div>
         <div class="register">
           <a href="#">Регистрация</a>
         </div>
       </div>
 
       <nav class="header-bottom">
-      	<ul>
+        <ul>
           <li><a href="index.html">Главная</a></li>
           <li><a href="#">Компания</a></li>
           <li><a href="catalog.html">Каталог</a></li>
@@ -49,132 +46,127 @@
   </header>
 
   <main>
-  	<section class="features">
-  		<div class="container">
+    <section class="features">
+      <div class="container">
+        <h2 class="visually-hidden">Особенности</h2>
+        <div first="first-features">
+          <ul class="feature-items">
+            <li>
+              <div class="feature-item">
+                <p>Материалы</p>
+                <a href="#">На любой вкус</a>
+              </div>
+            </li>
+            <li>
+              <div class="feature-item">
+                <p>Инструменты</p>
+                <a href="#">На все случаи</a>
+              </div>
+            </li>
+            <li>
+              <div class="feature-item">
+                <p>Техника</p>
+                <a href="#">Для стройки</a>
+              </div>
+            </li>
+          </ul>
+        </div>
+        <div class="last-features">
+          <ul class="feature-items">
+            <li>
+              <div class="feature-item">
+                <p>Скидки 50%</p>
+                <a href="#">На 350 товаров</a>
+              </div>
+            </li>
+            <li>
+              <div class="feature-item">
+                <p>Доставка</p>
+                <a href="#">Бесплатно</a>
+              </div>
+            </li>
+          </ul>
+          <section class="slider">
+            <div class="slide">
+              <p>Перфораторы</p>
+              <p>Настоящие мужские игрушки</p>
+              <img src="img/slider-1.jpg" alt="slider-1">
+              <a href="catalog.html">Открыть каталог</a>
+            </div>
+            <div class="slide">
+              <p>Дрели</p>
+              <p>Соседям на радость!</p>
+              <img src="img/slider-2.jpg" alt="slider-2">
+              <a href="catalog.html">Открыть каталог</a>
+            </div>
+          </section>
+        </div>
+      </div>
+    </section>
 
-  			<h2 class="visually-hidden">Особенности</h2>
+    <section class="popular-items">
 
-  			<div first="first-features">
-  				<ul class="feature-items">
-  					<li>
-  						<div class="feature-item">
-  							<p>Материалы</p>
-  							<a href="#">На любой вкус</a>
-  						</div>
-  					</li>
-  					<li>
-  						<div class="feature-item">
-  							<p>Инструменты</p>
-  							<a href="#">На все случаи</a>
-  						</div>
-  					</li>
-  					<li>
-  						<div class="feature-item">
-  							<p>Техника</p>
-  							<a href="#">Для стройки</a>
-  						</div>
-  					</li>
-  				</ul>
-  			</div>
-  			<div class="last-features">
-  				<ul class="feature-items">
-  					<li>
-  						<div class="feature-item">
-  							<p>Скидки 50%</p>
-  							<a href="#">На 350 товаров</a>
-			        </div>
-			      </li>
-			      <li>
-			        <div class="feature-item">
-			          <p>Доставка</p>
-			          <a href="#">Бесплатно</a>
-			        </div>
-			      </li>
-			    </ul>
-			    <section class="slider">
-			      <div class="slide">
-			        <p>Перфораторы</p>
-			        <p>Настоящие мужские игрушки</p>
-			        <img src="img/slider-1.jpg" alt="slider-1">
-			        <a href="catalog.html">Открыть каталог</a>
-			      </div>
-			      <div class="slide">
-			        <p>Дрели</p>
-			        <p>Соседям на радость!</p>
-			        <img src="img/slider-2.jpg" alt="slider-2">
-			        <a href="catalog.html">Открыть каталог</a>
-			      </div>
-			    </section>
-			  </div>
-			</div>
-		</section>
+      <div class="popular-items-header">
+        <h3>Популярные товары:</h3>
+        <a class="popular-items-link" href="#">Все популярные товары</a>
+      </div>
 
-		<section class="popular-items">
+      <div class="catalog">
 
-			<div class="popular-items-header">
-				<h3>Популярные товары:</h3>
-				<a class="popular-items-link" href="#">Все популярные товары</a>
-			</div>
+        <div class="catalog-item">
+          <img src="img.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 9000">
+          <div class="catalog-item-buttons">
+            <a class="item-button-buy" href="#">Купить</a>
+            <a class="item-button-bookmark" href="#">В закладки</a>
+          </div>
+          <a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 9000</a>
+          <s class="catalog-item-price">32500 Р.</s>
+          <a class="catalog-item-discount-price" href="#">25500 Р.</a>
+        </div>
 
-			<div class="catalog">
-				<div class="catalog-item">
-					<img src="img.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 9000">
-					<div class="catalog-item-buttons">
-						<a href="#" class="button-item-buy">Купить</a>
-						<a href="#" class="button-item-bookmark">В закладки</a>
-					</div>
-					<a href="#" class="catalog-item-vendor">Перфоратор BOSCH</a>
-					<a href="#" class="catalog-item-model">BFG 9000</a>
-					<a href="#" class="catalog-item-price">32500 Р.</a>
-					<a href="#" class="catalog-item-discount">25500 Р.</a>
-				</div>
+        <div class="catalog-item">
+          <img src="img.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 3000">
+          <div class="catalog-item-buttons">
+            <a class="item-button-buy" href="#">Купить</a>
+            <a class="item-button-bookmark" href="#">В закладки</a>
+          </div>
+          <a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 3000</a>
+          <s class="catalog-item-price">22500 Р.</s>
+          <a class="catalog-item-discount-price" href="#">15500 Р.</a>
+        </div>
 
-    		<div class="catalog-item">
-    			<img src="img.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 3000">
-    			<div class="catalog-item-buttons">
-    				<a href="#" class="button-item-buy">Купить</a>
-						<a href="#" class="button-item-bookmark">В закладки</a>
-					</div>
-					<a href="#" class="catalog-item-vendor">Перфоратор BOSCH</a>
-					<a href="#" class="catalog-item-model">BFG 3000</a>
-					<a href="#" class="catalog-item-price">22500 Р.</a>
-					<a href="#" class="catalog-item-discount">15500 Р.</a>
-				</div>
+        <div class="catalog-item">
+          <img src="img.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 6000">
+          <div class="catalog-item-buttons">
+            <a class="item-button-buy" href="#">Купить</a>
+            <a class="item-button-bookmark" href="#">В закладки</a>
+          </div>
+          <a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 6000</a>
+          <s class="catalog-item-price">30500 Р.</s>
+          <a class="catalog-item-discount-price" href="#">25500 Р.</a>
+        </div>
 
-    		<div class="catalog-item">
-    			<img src="img.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 6000">
-    			<div class="catalog-item-buttons">
-    				<a href="#" class="button-item-buy">Купить</a>
-						<a href="#" class="button-item-bookmark">В закладки</a>
-					</div>
-					<a href="#" class="catalog-item-vendor">Перфоратор BOSCH</a>
-					<a href="#" class="catalog-item-model">BFG 6000</a>
-					<a href="#" class="catalog-item-price">30500 Р.</a>
-					<a href="#" class="catalog-item-discount">25500 Р.</a>
-				</div>
-
-    		<div class="catalog-item">
-    			<img src="img.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 2000">
-    			<div class="catalog-item-buttons">
-    				<a href="#" class="button-item-buy">Купить</a>
-						<a href="#" class="button-item-bookmark">В закладки</a>
-					</div>
-					<a href="#" class="catalog-item-vendor">Перфоратор BOSCH</a>
-					<a href="#" class="catalog-item-model">BFG 2000</a>
-					<a href="#" class="catalog-item-discount">12500 Р.</a>
-				</div>
-			</div>
-		</section>
+        <div class="catalog-item">
+          <img src="img.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 2000">
+          <div class="catalog-item-buttons">
+            <a class="item-button-buy" href="#">Купить</a>
+            <a class="item-button-bookmark" href="#">В закладки</a>
+          </div>
+          <a class="catalog-item-title" href="#">Перфоратор BOSCH BFG 2000</a>
+          <a class="catalog-item-discount-price" href="#">12500 Р.</a>
+        </div>
+      </div>
+    </section>
 
     <section class="popular-brands">
-    	<div class="popular-brands-header">
-    		<h2>Популярные производители</h2>
+      <div class="popular-brands-header">
+        <h2>Популярные производители</h2>
         <a class="all-brands-link" href="#">Все производители</a>
       </div>
       <ul class="popular-brands-list">
-      	<li>
-      		<a href="#"><img src="img/brand-bosch.png" alt="bosch"></a>
-      	</li>
+        <li>
+          <a href="#"><img src="img/brand-bosch.png" alt="bosch"></a>
+        </li>
         <li>
           <a href="#"><img src="img/brand-makita.png" alt="makita"></a>
         </li>
@@ -199,117 +191,121 @@
       </ul>
     </section>
 
-	  <section class="services">
-	  	<div class="services-header">
-	  		<div class="container">
-	        <h2>Сервисы</h2>
-	        <p>Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
-	      </div>
-	    </div>
-	    <div class="services-tabs">
-	      <div class="container">
-	        <ul class="services-items">
-	          <li>
-	            <div class="service-item">
-	              <p>Доставка</p>
-	            </div>
-	          </li>
-	          <li>
-	            <div class="service-item">
-	              <p>Гарантия</p>
-	            </div>
-	          </li>
-	          <li>
-	            <div class="service-item">
-	              <p>Кредит</p>
-	            </div>
-	          </li>
-	        </ul>
-	        <div class="services-slider-items">
-	          <div class="slide-delivery">
-	            <h3>Доставка</h3>
-	            <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
-	          </div>
-	          <div class="slide-guarantee">
-	            <h3>Гарантия</h3>
-	            <p>Если купленный у нас товар поломается или заискрит, а также в случае пожара, спровоцированного его возгаранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. Дом уж восстановите как-нибудь сами.</p>
-	          </div>
-	          <div class="slide-credit">
-	            <h3>Кредит</h3>
-	            <p>Залезть в долговую яму стало проще! Кредитные консультанты придут вам на помощь.</p>
-	            <a href="#">Отправить заявку</a>
-	          </div>
-	        </div>
-	      </div>
-	    </div>
-	  </section>
+    <section class="services">
+      <div class="services-header">
+        <div class="container">
+          <h2>Сервисы</h2>
+          <p>Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+        </div>
+      </div>
+      <div class="services-tabs">
+        <div class="container">
+          <ul class="services-items">
+            <li>
+              <div class="service-item">
+                <p>Доставка</p>
+              </div>
+            </li>
+            <li>
+              <div class="service-item">
+                <p>Гарантия</p>
+              </div>
+            </li>
+            <li>
+              <div class="service-item">
+                <p>Кредит</p>
+              </div>
+            </li>
+          </ul>
+          <div class="services-slider-items">
+            <div class="slide-delivery">
+              <h3>Доставка</h3>
+              <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
+            </div>
+            <div class="slide-guarantee">
+              <h3>Гарантия</h3>
+              <p>Если купленный у нас товар поломается или заискрит, а также в случае пожара, спровоцированного его возгаранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. Дом уж восстановите как-нибудь сами.</p>
+            </div>
+            <div class="slide-credit">
+              <h3>Кредит</h3>
+              <p>Залезть в долговую яму стало проще! Кредитные консультанты придут вам на помощь.</p>
+              <a href="#">Отправить заявку</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
-	  <section class="info">
-	    <div class="container">
-	      <div class="info-about">
-	        <h2>Компания Техномарт</h2>
-	        <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
-	        <p>Мы можем доставить ваш товар в самые отдаленные точки России!Техномарт работает со многими транспортными компаниями: </p>
-	        <ul>
-	          <li>Деловые линии</li>
-	          <li>Автотрейдинг</li>
-	          <li>Желдорэкспедиция</li>
-	        </ul>
-	        <a href="#">Подробнее о компании</a>
-	      </div>
-	      <div class="info-contacts">
-	        <h2>Контакты</h2>
-	        <p>Вы можете забрать товар сами, заехав в наш офис:</p>
-	        <img src="img/map.png" alt="map">
-	        <a href="#">Заблудились? Напишите нам!</a>
-	        <img src="img/map-popup.png" alt="map-popup">
-	      </div>
-	    </div>
-	  </section>
-	</main>
+    <section class="info">
+      <div class="container">
+        <div class="info-about">
+          <h2>Компания Техномарт</h2>
+          <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
+          <p>Мы можем доставить ваш товар в самые отдаленные точки России!Техномарт работает со многими транспортными компаниями: </p>
+          <ul>
+            <li>Деловые линии</li>
+            <li>Автотрейдинг</li>
+            <li>Желдорэкспедиция</li>
+          </ul>
+          <a href="#">Подробнее о компании</a>
+        </div>
+        <div class="info-contacts">
+          <h2>Контакты</h2>
+          <p>Вы можете забрать товар сами, заехав в наш офис:</p>
+          <img src="img/map.png" alt="map">
+          <a href="#">Заблудились? Напишите нам!</a>
+          <img src="img/map-popup.png" alt="map-popup">
+        </div>
+      </div>
+    </section>
+  </main>
 
-	<footer>
-	  <div class="footer-top">
-	    <div class="container">
-	      <a href="#">Техномарт</a>
-	      <ul>
-	        <li><a href="#">Компания</a></li>
-	        <li><a href="#">Новости</a></li>
-	        <li><a href="catalog.html">Каталог</a></li>
-	        <li><a href="#">Доставка</a></li>
-	        <li><a href="#">Контакты</a></li>
-	      </ul>
-	    </div>
-	  </div>
-	  <div class="footer-middle">
-	    <div class="container">
-	      <p>г. Санкт-Петербург, ул.Б.Конюшенная, д.19/8 +7(812)555-05-55</p>
-	      <ul>
-	        <li><a href="#">Материалы</a></li>
-	        <li><a href="#">Техника</a></li>
-	        <li><a href="#">Инструмент</a></li>
-	        <li><a href="#">Спецпредложения</a></li>
-	      </ul>
-	    </div>
-	  </div>
-	  <div class="footer-bottom">
-	    <div class="container">
-	      <p>© 2010–2017 Компания «Техномарт» Все права защищены</p>
-	      <ul class="social-networks">
-	        <li>
-	          <a href="#"></a>
-	        </li>
-	        <li>
-	          <a href="#"></a>
-	        </li>
-	        <li>
-	          <a href="#"></a>
-	        </li>
-	      </ul>
-	      <p>Обратная связь: <a href="#"><b>mail@htmlacademy.ru</b></a></p>
-	      <p>Разработано - <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
-	    </div>
-	  </div>
-	</footer>
+  <footer>
+    <div class="footer-top">
+      <div class="container">
+        <a href="#">Техномарт</a>
+        <ul>
+          <li><a href="#">Компания</a></li>
+          <li><a href="#">Новости</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="footer-middle">
+      <div class="contacts">
+        <p>г. Санкт-Петербург, ул.Б.Конюшенная, д.19/8</p>
+        <p>+7(812)555-05-55</p>
+      </div>
+      <ul>
+        <li><a href="#">Материалы</a></li>
+        <li><a href="#">Техника</a></li>
+        <li><a href="#">Инструмент</a></li>
+        <li><a href="#">Спецпредложения</a></li>
+      </ul>
+    </div>
+    <div class="footer-bottom">
+      <div class="copyright">
+        <p>© 2010–2017 Компания «Техномарт»</p>
+        <p>Все права защищены</p>
+      </div>
+
+      <ul class="social">
+        <li><a class="social-button" href="#">Вконтакте</a></li>
+        <li><a class="social-button" href="#">Фейсбук</a></li>
+        <li><a class="social-button" href="#">Инстаграм</a></li>
+      </ul>
+
+      <div class="feedback">
+        <p>Обратная связь: </p>
+        <a class="footer-feedback-mail" href="#">mail@htmlacademy.ru</a>
+      </div>
+      <div class="copyright">
+        <p>Разработано - </p>
+        <a class="copyright-site" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
