--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <header class="page-header">
 
     <div class="header-top">
-      <a class="header-logo" href="index.html">Техномарт</a> <!-- Логотип -->
+      <a href="#"><img class="header-logo" src="img/logo-head.png" alt="Техномарт"></a>
       <form><input type="search" placeholder="поиск"></form>
       <a class="bookmarks" href="#">Закладки: 0</a>
       <a class="basket" href="#">Корзина: 10</a>
@@ -90,13 +90,13 @@
             <div class="slide">
               <p>Перфораторы</p>
               <p>Настоящие мужские игрушки</p>
-              <img src="img/slider-1.jpg" alt="slider-1">
+              <img src="img/slide-1.jpg" alt="Перфораторы">
               <a href="catalog.html">Открыть каталог</a>
             </div>
             <div class="slide">
               <p>Дрели</p>
               <p>Соседям на радость!</p>
-              <img src="img/slider-2.jpg" alt="slider-2">
+              <img src="img/slide-2.jpg" alt="Дрели">
               <a href="catalog.html">Открыть каталог</a>
             </div>
           </section>
@@ -114,7 +114,7 @@
       <div class="catalog">
 
         <div class="catalog-item">
-          <img src="img.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 9000">
+          <img src="img/bosch bfg 9000.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 9000">
           <div class="catalog-item-buttons">
             <a class="item-button-buy" href="#">Купить</a>
             <a class="item-button-bookmark" href="#">В закладки</a>
@@ -125,7 +125,7 @@
         </div>
 
         <div class="catalog-item">
-          <img src="img.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 3000">
+          <img src="img/bosch bfg 3000.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 3000">
           <div class="catalog-item-buttons">
             <a class="item-button-buy" href="#">Купить</a>
             <a class="item-button-bookmark" href="#">В закладки</a>
@@ -136,7 +136,7 @@
         </div>
 
         <div class="catalog-item">
-          <img src="img.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 6000">
+          <img src="img/bosch bfg 6000.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 6000">
           <div class="catalog-item-buttons">
             <a class="item-button-buy" href="#">Купить</a>
             <a class="item-button-bookmark" href="#">В закладки</a>
@@ -147,7 +147,7 @@
         </div>
 
         <div class="catalog-item">
-          <img src="img.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 2000">
+          <img src="img/bosch bfg 2000.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 2000">
           <div class="catalog-item-buttons">
             <a class="item-button-buy" href="#">Купить</a>
             <a class="item-button-bookmark" href="#">В закладки</a>
@@ -165,28 +165,28 @@
       </div>
       <ul class="popular-brands-list">
         <li>
-          <a href="#"><img src="img/brand-bosch.png" alt="bosch"></a>
+          <a href="#"><img src="img/bosch.jpg" alt="bosch"></a>
         </li>
         <li>
-          <a href="#"><img src="img/brand-makita.png" alt="makita"></a>
+          <a href="#"><img src="img/makita.jpg" alt="makita"></a>
         </li>
         <li>
-          <a href="#"><img src="img/brand-dewalt.png" alt="dewalt"></a>
+          <a href="#"><img src="img/de-walt.jpg" alt="dewalt"></a>
         </li>
         <li>
-          <a href="#"><img src="img/brand-interscol.png" alt="interscol"></a>
+          <a href="#"><img src="img/interscol.jpg" alt="interscol"></a>
         </li>
         <li>
-          <a href="#"><img src="img/brand-hitachi.png" alt="hitachi"></a>
+          <a href="#"><img src="img/hitachi.jpg" alt="hitachi"></a>
         </li>
         <li>
-          <a href="#"><img src="img/brand-lg.png" alt="lg"></a>
+          <a href="#"><img src="img/lg.jpg" alt="lg"></a>
         </li>
         <li>
-          <a href="#"><img src="img/brand-aeg.png" alt="aeg"></a>
+          <a href="#"><img src="img/aeg.jpg" alt="aeg"></a>
         </li>
         <li>
-          <a href="#"><img src="img/brand-metabo.png" alt="metabo"></a>
+          <a href="#"><img src="img/metabo.jpg" alt="metabo"></a>
         </li>
       </ul>
     </section>
@@ -221,14 +221,17 @@
             <div class="slide-delivery">
               <h3>Доставка</h3>
               <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
+              <img src="img/delivery.png" alt="Доставка">
             </div>
             <div class="slide-guarantee">
               <h3>Гарантия</h3>
               <p>Если купленный у нас товар поломается или заискрит, а также в случае пожара, спровоцированного его возгаранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. Дом уж восстановите как-нибудь сами.</p>
+              <img src="img/guarantee.png" alt="Гарантия">
             </div>
             <div class="slide-credit">
               <h3>Кредит</h3>
               <p>Залезть в долговую яму стало проще! Кредитные консультанты придут вам на помощь.</p>
+              <img src="img/credit.png" alt="Кредит">
               <a href="#">Отправить заявку</a>
             </div>
           </div>
@@ -252,9 +255,9 @@
         <div class="info-contacts">
           <h2>Контакты</h2>
           <p>Вы можете забрать товар сами, заехав в наш офис:</p>
-          <img src="img/map.png" alt="map">
+          <img src="img/map.jpg" alt="map">
           <a href="#">Заблудились? Напишите нам!</a>
-          <img src="img/map-popup.png" alt="map-popup">
+          <img src="img/map.jpg" alt="map-popup">
         </div>
       </div>
     </section>
@@ -263,7 +266,7 @@
   <footer>
     <div class="footer-top">
       <div class="container">
-        <a href="#">Техномарт</a>
+        <a href="#"><img class="footer-logo" src="img/logo-footer.png" alt="Техномарт"></a>
         <ul>
           <li><a href="#">Компания</a></li>
           <li><a href="#">Новости</a></li>
