--- a/index.html
+++ b/index.html
@@ -221,17 +221,14 @@
             <div class="slide-delivery">
               <h3>Доставка</h3>
               <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
-              <img src="img/delivery.png" alt="Доставка">
             </div>
             <div class="slide-guarantee">
               <h3>Гарантия</h3>
               <p>Если купленный у нас товар поломается или заискрит, а также в случае пожара, спровоцированного его возгаранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. Дом уж восстановите как-нибудь сами.</p>
-              <img src="img/guarantee.png" alt="Гарантия">
             </div>
             <div class="slide-credit">
               <h3>Кредит</h3>
               <p>Залезть в долговую яму стало проще! Кредитные консультанты придут вам на помощь.</p>
-              <img src="img/credit.png" alt="Кредит">
               <a href="#">Отправить заявку</a>
             </div>
           </div>
@@ -240,7 +237,6 @@
     </section>
 
     <section class="info">
-      <div class="container">
         <div class="info-about">
           <h2>Компания Техномарт</h2>
           <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
@@ -257,9 +253,13 @@
           <p>Вы можете забрать товар сами, заехав в наш офис:</p>
           <img src="img/map.jpg" alt="map">
           <a href="#">Заблудились? Напишите нам!</a>
-          <img src="img/map.jpg" alt="map-popup">
+
+          <section class="modal modal-map">
+            <h2 class="visually-hidden">Как до нас добраться</h2>
+            <span class="modal-close">x</span>
+          </section>
+          <!-- Так размечен попап и закрытие в курсе про разметку -->
         </div>
-      </div>
     </section>
   </main>
 
