поправлен путь к лого

--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
 <body>
   <header class="page-header">
     <div class="header-top">
-      <a href="#"><img class="header-logo" src="img/logo-header.png" alt="Техномарт"></a>
+      <a href="#"><img class="header-logo" src="img/logo-head.png" alt="Техномарт"></a>
       <form><input type="search" placeholder="поиск"></form>
       <a class="bookmarks" href="#">Закладки: 0</a>
       <a class="basket" href="#">Корзина: 10</a>
