--- a/catalog.html
+++ b/catalog.html
@@ -78,7 +78,7 @@
       <h2 class="visually-hidden">Список перфораторов</h2>
 
       <div class="catalog-item">
-        <img src="img/bosch bfg 3000.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 3000">
+        <img src="img/3000.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 3000">
         <div class="catalog-item-buttons">
           <a class="item-button-buy" href="#">Купить</a>
           <a class="item-button-bookmark" href="#">В закладки</a>
@@ -89,7 +89,7 @@
       </div>
 
       <div class="catalog-item">
-        <img src="img/bosch bfg 6000.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 6000">
+        <img src="img/6000.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 6000">
         <div class="catalog-item-buttons">
           <a class="item-button-buy" href="#">Купить</a>
           <a class="item-button-bookmark" href="#">В закладки</a>
@@ -100,7 +100,7 @@
       </div>
 
       <div class="catalog-item">
-        <img src="img/bosch bfg 2000.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 2000">
+        <img src="img/2000.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 2000">
         <div class="catalog-item-buttons">
           <a class="item-button-buy" href="#">Купить</a>
           <a class="item-button-bookmark" href="#">В закладки</a>
@@ -110,7 +110,7 @@
       </div>
 
       <div class="catalog-item">
-        <img src="img/bosch bfg 3000.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 3000">
+        <img src="img/3000.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 3000">
         <div class="catalog-item-buttons">
           <a class="item-button-buy" href="#">Купить</a>
           <a class="item-button-bookmark" href="#">В закладки</a>
@@ -121,7 +121,7 @@
       </div>
 
       <div class="catalog-item">
-        <img src="img/bosch bfg 6000.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 6000">
+        <img src="img/6000.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 6000">
         <div class="catalog-item-buttons">
           <a class="item-button-buy" href="#">Купить</a>
           <a class="item-button-bookmark" href="#">В закладки</a>
@@ -132,7 +132,7 @@
       </div>
 
       <div class="catalog-item">
-        <img src="img/bosch bfg 2000.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 2000">
+        <img src="img/2000.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 2000">
         <div class="catalog-item-buttons">
           <a class="item-button-buy" href="#">Купить</a>
           <a class="item-button-bookmark" href="#">В закладки</a>
@@ -142,7 +142,7 @@
       </div>
 
       <div class="catalog-item">
-        <img src="img/bosch bfg 3000.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 3000">
+        <img src="img/3000.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 3000">
         <div class="catalog-item-buttons">
           <a class="item-button-buy" href="#">Купить</a>
           <a class="item-button-bookmark" href="#">В закладки</a>
@@ -153,7 +153,7 @@
       </div>
 
       <div class="catalog-item">
-        <img src="img/bosch bfg 6000.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 6000">
+        <img src="img/6000.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 6000">
         <div class="catalog-item-buttons">
           <a class="item-button-buy" href="#">Купить</a>
           <a class="item-button-bookmark" href="#">В закладки</a>
@@ -164,7 +164,7 @@
       </div>
 
       <div class="catalog-item">
-        <img src="img/bosch bfg 2000.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 2000">
+        <img src="img/2000.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 2000">
         <div class="catalog-item-buttons">
           <a class="item-button-buy" href="#">Купить</a>
           <a class="item-button-bookmark" href="#">В закладки</a>
