--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       <div class="catalog">
 
         <div class="catalog-item">
-          <img src="img/bosch bfg 9000.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 9000">
+          <img src="img/9000.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 9000">
           <div class="catalog-item-buttons">
             <a class="item-button-buy" href="#">Купить</a>
             <a class="item-button-bookmark" href="#">В закладки</a>
@@ -125,7 +125,7 @@
         </div>
 
         <div class="catalog-item">
-          <img src="img/bosch bfg 3000.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 3000">
+          <img src="img/3000.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 3000">
           <div class="catalog-item-buttons">
             <a class="item-button-buy" href="#">Купить</a>
             <a class="item-button-bookmark" href="#">В закладки</a>
@@ -136,7 +136,7 @@
         </div>
 
         <div class="catalog-item">
-          <img src="img/bosch bfg 6000.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 6000">
+          <img src="img/6000.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 6000">
           <div class="catalog-item-buttons">
             <a class="item-button-buy" href="#">Купить</a>
             <a class="item-button-bookmark" href="#">В закладки</a>
@@ -147,7 +147,7 @@
         </div>
 
         <div class="catalog-item">
-          <img src="img/bosch bfg 2000.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 2000">
+          <img src="img/2000.jpg" width="218" height="169" alt="Перфоратор BOSCH BFG 2000">
           <div class="catalog-item-buttons">
             <a class="item-button-buy" href="#">Купить</a>
             <a class="item-button-bookmark" href="#">В закладки</a>
@@ -256,7 +256,7 @@
 
           <section class="modal modal-map">
             <h2 class="visually-hidden">Как до нас добраться</h2>
-            <span class="modal-close">x</span>
+            <input class="modal-close" type="button">
           </section>
           <!-- Так размечен попап и закрытие в курсе про разметку -->
         </div>
