--- a/catalog.html
+++ b/catalog.html
@@ -188,6 +188,7 @@
         Существуют электромеханические и пневматические перфораторы. Современные модели могу выполнять функции дрели, Шуруповерта и отбойного молотка. В
         Ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
       </section>
+
   </main>
 
   <footer>
@@ -247,8 +248,10 @@
       <div class="cart-notification-decision">
         <button type="submit" class="cart-order-btn">Оформить заказ</button>
         <a href="#" class="cart-cancel-btn">Продолжить покупки</a>
+        <button class="modal-close" type="button">Закрыть</button>
       </div>
     </form>
   </div>
+
 </body>
 </html>
