--- a/index.html
+++ b/index.html
@@ -254,9 +254,32 @@
           <img src="img/map.jpg" alt="map">
           <a href="#">Заблудились? Напишите нам!</a>
 
+          <section class="modal modal-login">
+            <form class="login-form" action="https://echo.htmlacademy.ru" method="post">
+              <p>
+                <label for="user-login">Ваше имя:</label>
+                <input id="user-login" type="text" name="login" placeholder="Имя Фамилия">
+              </p>
+              <p>
+                <label for="user-email">Ваш e-mail:</label>
+                <input id="email" type="text" name="email" placeholder="email@example.com">
+              </p>
+              <p>
+                <label class="user-letter">Текст письма:
+                  <input type="text" name="text of the letter" placeholder="В свободной форме">
+                </label>
+              </p>
+              <button class="button" type="submit">Отправить</button>
+            </form>
+            <button class="modal-close" type="button">Закрыть</button>
+          </section>
+
           <section class="modal modal-map">
             <h2 class="visually-hidden">Как до нас добраться</h2>
-            <input class="modal-close" type="button">
+            <p>
+              <img src="img/map-big.jpg" width="940" height="446" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
+            </p>
+            <button class="modal-close" type="button">Закрыть</button>
           </section>
           <!-- Так размечен попап и закрытие в курсе про разметку -->
         </div>
