Добавлен ценовой выбор

--- a/catalog.html
+++ b/catalog.html
@@ -63,7 +63,9 @@
       <form class="filter" method="get" action="https://echo.htmlacademy.ru">
         <fieldset>
           <legend>Цена:</legend>
-
+          <input type="range" name="radio" min="0" max="30000" value="25000">
+          <input class="min-price" type="text" value="0"> —
+          <input class="max-price" type="text" value="30000">
         </fieldset>
         <fieldset>
           <legend>Производители:</legend>
@@ -227,7 +229,7 @@
 
     </section>
 
-    <section class="main-bottom">
+    <section class="information-about-punchers">
       <h3>Пара слов о перфораторах</h3>
       <p>Перфоратор - универсальный строительный инструмент. Предназначенный для сверления и долбления отверстий в кирпиче, бетоне и камне.
         Существуют электромеханические и пневматические перфораторы. Современные модели могу выполнять функции дрели, Шуруповерта и отбойного молотка. В
@@ -260,8 +262,10 @@
 
     <div class="footer-middle">
       <div class="contacts">
-        <p>г. Санкт-Петербург, ул.Б.Конюшенная, д.19/8</p>
-        <p>+7(812)555-05-55</p>
+        <p>
+          г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br>
+          +7 (812) 555-05-55
+        </p>
       </div>
 
       <ul class="footer-middle-navigation">
