--- a/index.html
+++ b/index.html
@@ -193,44 +193,41 @@
 
     <section class="services">
       <div class="services-header">
-        <div class="container">
-          <h2>Сервисы</h2>
-          <p>Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
-        </div>
+        <h2>Сервисы</h2>
+        <p>Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
       </div>
       <div class="services-tabs">
-        <div class="container">
-          <ul class="services-items">
-            <li>
-              <div class="service-item">
-                <p>Доставка</p>
-              </div>
-            </li>
-            <li>
-              <div class="service-item">
-                <p>Гарантия</p>
-              </div>
-            </li>
-            <li>
-              <div class="service-item">
-                <p>Кредит</p>
-              </div>
-            </li>
-          </ul>
-          <div class="services-slider-items">
-            <div class="slide-delivery">
-              <h3>Доставка</h3>
-              <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
+        <ul class="services-items">
+          <li>
+            <div class="service-item">
+              <p>Доставка</p>
             </div>
-            <div class="slide-guarantee">
-              <h3>Гарантия</h3>
-              <p>Если купленный у нас товар поломается или заискрит, а также в случае пожара, спровоцированного его возгаранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. Дом уж восстановите как-нибудь сами.</p>
+          </li>
+          <li>
+            <div class="service-item">
+              <p>Гарантия</p>
             </div>
-            <div class="slide-credit">
-              <h3>Кредит</h3>
-              <p>Залезть в долговую яму стало проще! Кредитные консультанты придут вам на помощь.</p>
-              <a href="#">Отправить заявку</a>
+          </li>
+          <li>
+            <div class="service-item">
+              <p>Кредит</p>
             </div>
+          </li>
+        </ul>
+
+        <div class="services-slider-items">
+          <div class="slide-delivery">
+            <h3>Доставка</h3>
+            <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
+          </div>
+          <div class="slide-guarantee">
+            <h3>Гарантия</h3>
+            <p>Если купленный у нас товар поломается или заискрит, а также в случае пожара, спровоцированного его возгаранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. Дом уж восстановите как-нибудь сами.</p>
+          </div>
+          <div class="slide-credit">
+            <h3>Кредит</h3>
+            <p>Залезть в долговую яму стало проще! Кредитные консультанты придут вам на помощь.</p>
+            <a href="#">Отправить заявку</a>
           </div>
         </div>
       </div>
@@ -299,8 +296,10 @@
     </div>
     <div class="footer-middle">
       <div class="contacts">
-        <p>г. Санкт-Петербург, ул.Б.Конюшенная, д.19/8</p>
-        <p>+7(812)555-05-55</p>
+        <p>
+          г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br>
+          +7 (812) 555-05-55
+        </p>
       </div>
       <ul>
         <li><a href="#">Материалы</a></li>
