--- a/catalog.html
+++ b/catalog.html
@@ -63,11 +63,18 @@
       <form class="filter" method="get" action="https://echo.htmlacademy.ru">
         <fieldset>
           <legend>Цена:</legend>
-          <div class="min-toggle"></div>
-          <div class="max-toggle"></div>
-          <div class="price-controls">
-            <input class="min-price" type="text" value="0"> —
-            <input class="max-price" type="text" value="30000">
+          <div class="range-filter">
+            <div class="range-controls">
+              <div class="scale">
+                <div class="bar" style="margin-left: 20%; width: 30%"></div>
+              </div>
+              <div class="toggle toggle-min"></div>
+              <div class="toggle toggle-max"></div>
+            </div>
+            <div class="price-controls">
+              <label class="min-price">от <input name="min-price" type="text" value="0"></label>
+              <label class="max-price">до <input name="max-price" type="text" value="30000"></label>
+            </div>
           </div>
         </fieldset>
         <fieldset>
