--- a/catalog.html
+++ b/catalog.html
@@ -243,18 +243,9 @@
       <h3>Пара слов о перфораторах</h3>
       <p>Перфоратор - универсальный строительный инструмент. Предназначенный для сверления и долбления отверстий в кирпиче, бетоне и камне.
         Существуют электромеханические и пневматические перфораторы. Современные модели могу выполнять функции дрели, Шуруповерта и отбойного молотка. В
-        Ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
-      </section>
-
-      <section class="cart-notification">
-        <form action="https://echo.htmlacademy.ru" method="post">
-          <p class="cart-notification-title">Товар добавлен в корзину!</p>
-          <button type="submit" class="cart-order-btn">Оформить заказ</button>
-          <a href="#" class="cart-cancel-btn">Продолжить покупки</a>
-          <button class="modal-close" type="button">Закрыть</button>
-        </form>
-      </section>
-
+        Ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.
+      </p>
+    </section>
   </main>
 
   <footer>
@@ -308,6 +299,15 @@
       </div>
     </div>
   </footer>
+
+  <section class="cart-notification">
+    <form action="https://echo.htmlacademy.ru" method="post">
+      <p class="cart-notification-title">Товар добавлен в корзину!</p>
+      <button type="submit" class="cart-order-btn">Оформить заказ</button>
+      <a href="#" class="cart-cancel-btn">Продолжить покупки</a>
+      <button class="modal-close" type="button">Закрыть</button>
+    </form>
+  </section>
 
 </body>
 </html>
