--- a/index.html
+++ b/index.html
@@ -198,24 +198,12 @@
       </div>
       <div class="services-tabs">
         <ul class="services-items">
-          <li>
-            <div class="service-item">
-              <p>Доставка</p>
-            </div>
-          </li>
-          <li>
-            <div class="service-item">
-              <p>Гарантия</p>
-            </div>
-          </li>
-          <li>
-            <div class="service-item">
-              <p>Кредит</p>
-            </div>
-          </li>
+          <li>Доставка</li>
+          <li>Гарантия</li>
+          <li>Кредит</li>
         </ul>
 
-        <div class="services-slider-items">
+        <div class="slides">
           <div class="slide-delivery">
             <h3>Доставка</h3>
             <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
@@ -268,8 +256,8 @@
           </label>
         </p>
         <button class="button" type="submit">Отправить</button>
-        <button class="modal-close" type="button">Закрыть</button>
       </form>
+      <button class="modal-close" type="button">Закрыть</button>
     </section>
 
     <section class="modal modal-map">
