--- a/catalog.html
+++ b/catalog.html
@@ -239,7 +239,7 @@
 
     </section>
 
-    <section class="information-about-punchers">
+    <section class="product-information">
       <h3>Пара слов о перфораторах</h3>
       <p>Перфоратор - универсальный строительный инструмент. Предназначенный для сверления и долбления отверстий в кирпиче, бетоне и камне.
         Существуют электромеханические и пневматические перфораторы. Современные модели могу выполнять функции дрели, Шуруповерта и отбойного молотка. В
